--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -9,8 +9,11 @@ h1 {
     margin-right: 600px;
     border: 3.5px solid black;
 }
-.username{
+
+.Username{
     margin-left: 100px;
 }
-.Password{
+.Password {
+    margin-top: 100px;
+    margin-left: 100px;
 }
