--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -1,5 +1,6 @@
 * {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -8,12 +9,75 @@ h1 {
     margin-left: 600px;
     margin-right: 600px;
     border: 3.5px solid black;
+    border-radius: 30px;
+    background-image: url(https://tse1.mm.bing.net/th/id/OIP.Ym7DuBLU0HQwAA8MzL2xAgHaEJ?pid=Api&P=0&h=180);
 }
 
-.Username{
-    margin-left: 100px;
+.body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
+
+.username {
+    position: absolute;
+    top: 150px;
+    left: 749px;
+    border-radius: 10px;
+}
+
+.Username {
+    position: absolute;
+    top: 150px;
+    left: 663px;
+    background-color: white;
+    padding: 1px;
+    border-radius: 10px;
+}
+
+.password {
+    position: absolute;
+    top: 240px;
+    left: 663px;
+    background-color: white;
+    padding: 1px;
+    border-radius: 10px;
+}
+
 .Password {
-    margin-top: 100px;
-    margin-left: 100px;
+    position: absolute;
+    top: 240px;
+    left: 749px;
+    border-radius: 10px;
+}
+
+.submit {
+    position: absolute;
+    top: 330px;
+    left: 700px;
+    padding-left: 67px;
+    padding-right: 67px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+}
+
+.loginborder {
+    margin: 0;
+    padding: 0;
+    padding: 190px;
+    border: 3.5px solid black;
+    margin-left: 599px;
+    margin-right: 671px;
+    border-radius: 30px;
+    background-image: url(https://tse1.mm.bing.net/th/id/OIP.Ym7DuBLU0HQwAA8MzL2xAgHaEJ?pid=Api&P=0&h=180);
+}
+
+.port {
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-image: url(https://i.pinimg.com/736x/e8/29/f5/e829f502a077d60f19c199dd35b8549c.jpg);
 }
