--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -18,6 +18,7 @@
     padding: 0;
     width: 100%;
     height: 100%;
+    background-image: url(../assets/cybertech.png);
 }
 
 .username {
@@ -67,7 +68,7 @@
     margin-top: 50px;
     padding: 0;
     padding: 190px;
-    border: 3.5px solid black;
+    border: 1.5px solid black;
     margin-left: 600px;
     margin-right: 671px;
     border-radius: 30px;
