--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -1,79 +1,9 @@
-* {
+*{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
     overflow-x: hidden;
 }
 
-.login{
-    color: black;
-    position: absolute;
-    top: 100px;
-    left: 740px;
-    text-align: center;
-    border-radius: 30px;
-}
-
-.body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(../assets/cybertech.png);
-}
-
-.username {
-    position: absolute;
-    top: 200px;
-    left: 749px;
-    border-radius: 10px;
-}
-
-.Username {
-    position: absolute;
-    top: 200px;
-    left: 663px;
-    background-color: white;
-    padding: 1px;
-    border-radius: 10px;
-}
-
-.password {
-    position: absolute;
-    top: 300px;
-    left: 663px;
-    background-color: white;
-    padding: 1px;
-    border-radius: 10px;
-}
-
-.Password {
-    position: absolute;
-    top: 300px;
-    left: 749px;
-    border-radius: 10px;
-}
-
-.submit {
-    position: absolute;
-    top: 350px;
-    left: 700px;
-    padding-left: 67px;
-    padding-right: 67px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-}
-
-.loginborder {
-    margin-top: 50px;
-    padding: 0;
-    padding: 190px;
-    border: 1.5px solid black;
-    margin-left: 600px;
-    margin-right: 671px;
-    border-radius: 30px;
-    background-color: white;
-}
 
 .port {
     position: absolute;
@@ -83,4 +13,8 @@
     background-position: center center;
     background-size: cover;
     background-image: url(https://www.makoweruk.com/wp-content/uploads/2023/10/2000_Y05-1.jpg);
+}
+
+.c{
+    
 }
