--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow-x: hidden;
 }
@@ -8,6 +8,41 @@
     background-image: url(https://www.makoweruk.com/wp-content/uploads/2023/10/2000_Y05-1.jpg);
 }
 
-.username{
+
+.login {
+    margin-left: 700px;
 }
 
+.Username {
+    margin-left: 650px;
+}
+
+.username {
+    position: absolute;
+    top: 120px;
+    left: 510px;
+    margin-left: 150px;
+}
+
+.Password {
+    position: absolute;
+    left: 660px;
+    top: 190px;
+}
+
+.password {
+    position: absolute;
+    top: 220px;
+    left: 510px;
+    margin-left: 150px;
+}
+
+.submit{
+    position: absolute;
+    left: 660px;
+    top: 280px;
+}
+
+.loginborder{
+    border: 2px solid black;
+}
