--- a/css/porteditor.css
+++ b/css/porteditor.css
@@ -66,3 +66,9 @@ th,
 td {
     border: rgb(28, 39, 30) solid 1px;
 }
+
+.crtprod{
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 30px;
+}
