--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -18,7 +18,7 @@
     margin-left: 650px;
 }
 
-.username {
+.matik {
     display: block;
     margin-left: 650px;
 }
@@ -42,3 +42,4 @@
 .loginborder{
     border: 2px solid black;
 }
+
