--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -8,7 +8,6 @@
     background-image: url(https://www.makoweruk.com/wp-content/uploads/2023/10/2000_Y05-1.jpg);
 }
 
-
 .login {
     margin-left: 700px;
 }
@@ -40,6 +39,9 @@
 }
 
 .loginborder{
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-top: 200px;
     border: 2px solid black;
 }
 
